--- a/Rmd/analyze.Rmd
+++ b/Rmd/analyze.Rmd
@@ -12,11 +12,11 @@ knitr::opts_chunk$set(message = F, warning = F)
 ```{r initialize, include=FALSE}
 # Source default parameters and functions
 sapply(c("R/conversions.R", "R/def_pars.R", "R/init_env.R", "R/plot_results.R",
-         "R/run_coral.R", "R/sym_PI.R", "R/run_steady_states.R", "R/plot_steady_states.R",
+         "R/run_coral.R", "R/run_coral_ss.R", "R/sym_PI.R", "R/run_steady_states.R", "R/plot_steady_states.R",
          "R/explore_NPQ.R"), source, .GlobalEnv)
 ```
 
-```{r lightamp, fig.width=5, fig.height=5, eval=F, include=F}
+```{r lightamp, fig.width=5, fig.height=5, eval=T, include=T}
 # Import data from Marcelino et al. 2013
 md <- read.csv("data/marcelino2013_fig2a.csv")
 md$S.R <- md$density * cm2.m2 / CmolR.m2 * CmolS.cellS  # Convert units of symbiont density to CmolS/CmolR
@@ -35,139 +35,191 @@ lines(fit ~ seq(0, 0.5, 0.01))
 formula(mod); coef(mod)
 ```
 
-### Steady states values with default parameters (jCO2a=0.32)
+### Steady states values with default parameters - no feeding
 ```{r ss, cache=T, fig.width=5, fig.height=4.4}
-# Set time and parameters
-time <- seq(1,100,1)
+# Set parameters
 defpars <- def_pars()  # Get default parameters
 
 # Set values of L and N at which to get steady state values
-at <- expand.grid(L=seq(from=0, to=60, length.out=11),
-                  N=seq(from=0, to=4e-6, length.out=11))
+at <- expand.grid(L=seq(from=0, to=60, length.out=21),
+                  N=seq(from=0, to=4e-6, length.out=21))
 
 # Run to steady state and plot results
-ssdat <- run_steady_states(time=time, pars=defpars, at=at)
+ssdat <- run_steady_states(pars=replace(defpars, c("initS", "kROS"), c(1, 100)), at=at, food=0, runtime=T)
 plot_steady_states(ssdat)
 ```
+With default parameters, steady state values of specific growth are higher than usually observed in corals (skeletal growth), but patterns across environments are consistent with literature. 
 
-With default parameters, steady state values of specific growth are higher than usually observed in corals (skeletal growth).
+### Steady states values with default parameters + feeding
+```{r ss_feeding, cache=T, fig.width=5, fig.height=4.4}
+# Set parameters
+defpars <- def_pars()  # Get default parameters
 
-### Change kROS from 60 to 100
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=T, include=T}
-pars <- defpars
-pars$kROS <- 100
+# Set values of L and N at which to get steady state values
+at <- expand.grid(L=seq(from=0, to=60, length.out=21),
+                  N=seq(from=0, to=4e-6, length.out=21))
+
 # Run to steady state and plot results
-ssdat <- run_steady_states(time=time, pars=pars, at=at)
-plot_steady_states(ssdat)#
-```
-
-### Change kROS to 100 and b to 5
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=T, include=T}
-pars <- defpars
-pars$kROS <- 100
-pars$b <- 5
-# Run to steady state and plot results
-ssdat <- run_steady_states(time=time, pars=pars, at=at)
-plot_steady_states(ssdat)#
-```
-
-### Take away recycling...
-```{r ss2, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-pars <- defpars
-pars$sigmaCH <- 0
-pars$sigmaCS <- 0
-pars$sigmaNH <- 0
-pars$sigmaNS <- 0
-# Run to steady state and plot results
-ssdat <- run_steady_states(time=time, pars=pars, at=at)
+ssdat <- run_steady_states(pars=replace(defpars, c("initS", "kROS"), c(1, 100)), at=at, food=5e-6, runtime=T)
 plot_steady_states(ssdat)
 ```
+With default parameters, steady state values of specific growth are higher than usually observed in corals (skeletal growth), but patterns across environments are consistent with literature. 
 
-Specific growth rates are reduced by a bit, and both growth and S:H do not increase as much in response in increasing DIN.
+### Steady states values with default parameters - + tolerant symbiont
+```{r ss_tolerant, cache=T, fig.width=5, fig.height=4.4}
+# Set parameters
+defpars <- def_pars()  # Get default parameters
 
-### Increase CO2 delivery rate (jCO2a=0.5)
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-ssdat <- run_steady_states(time=time, at=at,
-                            pars=replace(defpars, "jCO2a", 0.5))
-plot_steady_states(ssdat) 
+# Set values of L and N at which to get steady state values
+at <- expand.grid(L=seq(from=0, to=60, length.out=21),
+                  N=seq(from=0, to=4e-6, length.out=21))
+
+# Run to steady state and plot results
+ssdat <- run_steady_states(pars=replace(defpars, c("initS", "kROS"), c(1, 200)), at=at, food=0, runtime=T)
+plot_steady_states(ssdat)
 ```
+With some feeding (more realistic), can maintain growth with very low symbionts (bleached) at very high or low light with high nutrients.
 
-CO~2~ limitation of photosynthesis is reduced, and S:H biomass does not increase as much in response to low light.
-
-### Increase CO2 delivery rate even more (jCO2a=1)
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-ssdat <- run_steady_states(time=time, at=at,
-                            pars=replace(defpars, "jCO2a", 1))
-plot_steady_states(ssdat) 
-```
-
-Photosynthesis never becomes CO~2~-limited.
-
-### Decrease CO2 delivery rate (jCO2a=0.1)
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-ssdat <- run_steady_states(time=time, at=at,
-                            pars=replace(defpars, "jCO2a", 0.1))
-plot_steady_states(ssdat) 
-```
-
-Photosynthesis is always CO~2~-limited, and host growth almost always carbon-limited. Upper light limit is reduced, and S:H biomass ratios are increased. 
-
-### Decrease CO2 delivery rate even more (jCO2a=0.05)
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-ssdat <- run_steady_states(time=time, at=at,
-                            pars=replace(defpars, "jCO2a", 0.05))
-plot_steady_states(ssdat) 
-```
-
-Increasing DIN now decreases growth rates. S:H ratios are uniformly high.
-
-### Default parameters with tolerant symbiont (kROS=100; jCPm=1.4)
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-ssdat <- run_steady_states(time=time, at=at,
-                            pars=replace(defpars, c("kROS","jCPm"), c(100, 1.4)))
-plot_steady_states(ssdat) 
-```
-
-### Default parameters with only lower photosynthesis rate (jCPm=1.4)
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-ssdat <- run_steady_states(time=time, at=at,
-                            pars=replace(defpars, "jCPm", 1.4))
-plot_steady_states(ssdat) 
-```
-
-
-### Default parameters with only lower photosynthesis rate (jCPm=2)
-```{r, cache=T, fig.width=5, fig.height=4.4, eval=F, include=F}
-ssdat <- run_steady_states(time=time, at=at,
-                            pars=replace(defpars, "jCPm", 2))
-plot_steady_states(ssdat) 
-```
-
-
-
-
-### Run 1
-```{r run1}
+### Vary Light
+```{r varyL, eval=F, include=F}
 # Set run time vector
 time <- seq(1, 365, 0.5)  # if single model run, use time input
 
 # Initialize environment
-env <- init_env(time=time, L=c(5,40,2), N=c(1e-7,1e-7,0), X=c(0,0,0))
+env <- init_env(time=time, L=c(5,30,2), N=c(1e-7,1e-7,0), X=c(5e-6,5e-6,0))
 
 # Set parameters
 defpars <- def_pars()  # Get default parameters
 
 # Run simulation
-run <- run_coral(time=time, env=env, pars=defpars)#
+run <- run_coral(time=time, env=env, pars=replace(defpars, "initS", 0.2))#
+plot_run(run)
 ```
+
+### Vary nutrients
+```{r varyN, eval=F, include=F}
+# Set run time vector
+time <- seq(1, 365, 0.5)  # if single model run, use time input
+
+# Initialize environment
+env <- init_env(time=time, L=c(20,20,2), N=c(1e-7,4e-6,2), X=c(5e-6,5e-6,0))
+
+# Set parameters
+defpars <- def_pars()  # Get default parameters
+
+# Run simulation
+run <- run_coral(time=time, env=env, pars=replace(defpars, "initS", 0.25))#
+plot_run(run)
+```
+
+### Vary nutrients @ very low light
+```{r varyN_lowL, eval=F, include=F}
+# Set run time vector
+time <- seq(1, 365, 0.5)  # if single model run, use time input
+
+# Initialize environment
+env <- init_env(time=time, L=c(5,5,2), N=c(1e-7,4e-6,2), X=c(5e-6,5e-6,0))
+
+# Set parameters
+defpars <- def_pars()  # Get default parameters
+
+# Run simulation
+run <- run_coral(time=time, env=env, pars=replace(defpars, "initS", 1))#
+plot_run(run)
+```
+
+### Steadily increasing light
+```{r incrL, eval=F, include=F}
+# Set run time vector
+time <- seq(1, 365, 0.5)  # if single model run, use time input
+
+# Initialize environment
+env <- init_env(time=time, L=c(30,60,0), N=c(1e-7,1e-7,2), X=c(5e-6,5e-6,0))
+
+# Set parameters
+defpars <- def_pars()  # Get default parameters
+
+# Run simulation
+run <- run_coral(time=time, env=env, pars=replace(defpars, "initS", 0.1))#
+plot_run(run)
+```
+
+### Steadily increasing light, + high N
+```{r incrL_highN, eval=F, include=F}
+# Set run time vector
+time <- seq(1, 365, 0.5)  # if single model run, use time input
+
+# Initialize environment
+env <- init_env(time=time, L=c(15,60,0), N=c(2e-6,2e-6,2), X=c(5e-6,5e-6,0))
+
+# Set parameters
+defpars <- def_pars()  # Get default parameters
+
+# Run simulation
+run <- run_coral(time=time, env=env, pars=replace(defpars, "initS", 0.5))#
+plot_run(run)
+```
+
+### Both on same plot
+```{r incrL_multiline, eval=F, include=F}
+time <- seq(1, 365, 0.5)  # Set time
+defpars <- def_pars()  # Get default parameters
+
+# Run 1
+env1 <- init_env(time=time, L=c(15,60,0), N=c(1e-7,1e-7,2), X=c(5e-6,5e-6,0))
+run1 <- run_coral(time=time, env=env1, pars=replace(defpars, "initS", 0.1))
+# Run 2
+env2 <- init_env(time=time, L=c(15,60,0), N=c(2e-6,2e-6,2), X=c(5e-6,5e-6,0))
+run2 <- run_coral(time=time, env=env2, pars=replace(defpars, "initS", 0.5))
+# Run 3
+env3 <- init_env(time=time, L=c(15,60,0), N=c(4e-6,4e-6,2), X=c(5e-6,5e-6,0))
+run3 <- run_coral(time=time, env=env3, pars=replace(defpars, "initS", 0.5))
+# Run 4
+env4 <- init_env(time=time, L=c(15,60,0), N=c(1e-7,1e-7,2), X=c(0,0,0))
+run4 <- run_coral(time=time, env=env4, pars=replace(defpars, "initS", 0.2))
+
+# Plot
+plot(NA, xlim=range(time), ylim=c(0,0.5))
+with(run1, lines(time, S$S/H$H, lty=1))
+with(run2, lines(time, S$S/H$H, lty=2))
+with(run3, lines(time, S$S/H$H, lty=3))
+with(run4, lines(time, S$S/H$H, lty=4))
+```
+
+```{r incrL_multiline1, include=F, eval=F}
+time <- seq(1, 200, 0.5)  # Set time
+defpars <- def_pars()  # Get default parameters
+defpars <- replace(defpars, "kNPQ", 112)
+
+# Run 1
+env1 <- init_env(time=time, L=c(15,40,2), N=c(1e-7,1e-7,2), X=c(5e-6,5e-6,0))
+run1 <- run_coral(time=time, env=env1, pars=replace(defpars, "initS", 0.12))
+# Run 2 - increase food
+env2 <- init_env(time=time, L=c(15,40,2), N=c(1e-7,1e-7,2), X=c(10e-6,10e-6,0))
+run2 <- run_coral(time=time, env=env2, pars=replace(defpars, "initS", 0.12))
+# Run 3 - increase DIN
+env3 <- init_env(time=time, L=c(15,40,2), N=c(2e-6,2e-6,2), X=c(10e-6,10e-6,0))
+run3 <- run_coral(time=time, env=env3, pars=replace(defpars, "initS", 0.25))
+
+
+# Plot
+plot(time, env1$L, col=alpha("gold", 0.5), type="l", lwd=2, axes=F)
+par(new=T)
+plot(NA, xlim=range(time), ylim=c(0,0.3), yaxs="i")
+with(run1, lines(time, S$S/H$H, lty=1))
+with(run2, lines(time, S$S/H$H, lty=2))
+with(run3, lines(time, S$S/H$H, lty=3))
+
+```
+
 
 ##### Plot run 1 symbiont PI curve
 ```{r run1_PI, cache=T, fig.height=3}
-sym(pars=replace(defpars, c("kNPQ", "kROS", "k"), c(40, 30, 1)), jL=c(0,250), jCO2=c(100,100), NPQ="fixed")
+sym_PI(pars=defpars)
 ```
 
 ##### Plot run 1 output
-```{r abb, fig.height=8, fig.width=3, eval=T, include=T}
+```{r abb, fig.height=8, fig.width=3, eval=F, include=F}
 time <- seq(1,365,0.5)
 env <- init_env(time=time, L=c(5,40,2), N=c(1e-7,1e-7,0), X=c(4e-6,4e-6,0))
 run <- run_coral(time=time, env=env, 
@@ -234,19 +286,19 @@ plot_run(run)
 
 
 ##### Run 2 -- increase kROS to 100 and b to 5
-```{r, fig.height=7, fig.width=3, eval=T, include=T}
+```{r, fig.height=7, fig.width=3, eval=F, include=F}
 run <- run_coral(time=time, env=env, pars=replace(defpars, c("kROS", "b"), c(100, 5)))
 plot_run2(run)#
 ```
 
 ##### Run 2 -- increase kROS to 100 and b to 10
-```{r, fig.height=7, fig.width=3, eval=T, include=T}
+```{r, fig.height=7, fig.width=3, eval=F, include=F}
 run <- run_coral(time=time, env=env, pars=replace(defpars, c("kROS", "b"), c(100, 10)))
 plot_run2(run)#
 ```
 
 ##### Run 2 -- fluctuate DIN
-```{r run2_plot, fig.height=7, fig.width=3, eval=T, include=T}
+```{r run2_plot, fig.height=7, fig.width=3, eval=F, include=F}
 env2 <- init_env(time=time, L=c(20,20,0), N=c(1e-7,4e-6,2), X=c(0,0,0))
 run2 <- run_coral(time=time, env=env2, pars=pars)
 #plot_run2(run2)
@@ -262,7 +314,7 @@ plot_bl(run2)
 ```
 
 ##### Run 3 -- fluctuate light with higher DIN
-```{r run3_plot, fig.height=3, fig.width=3, eval=T, include=T}
+```{r run3_plot, fig.height=3, fig.width=3, eval=F, include=F}
 # Set run time vector
 #time <- seq(1, 365, 0.5)  # if single model run, use time input
 
